fix z-index

--- a/sass/_pos-terminal.scss
+++ b/sass/_pos-terminal.scss
@@ -35,7 +35,7 @@
 	flex-wrap: wrap;
 	height: 100vh;
 	width: 20vw;
-	z-index: 10;
+	z-index: 10000;
 }
 #menu-left .menu-item {
 	color: #f0f0f0;
